// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database Functions [AVERAGEIFS 4] =AVERAGEIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "AVERAGEIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [AVERAGEIFS 100] =AVERAGEIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >100) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "AVERAGEIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "100",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [COLUMN_COUNT] =$28e28190-63bd-4f70-aeca-26e72574c01a.COLUMN_COUNT() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COLUMN_COUNT",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [COUNTA] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.COUNTA() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTA",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [COUNTA] =$28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64.COUNTA() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "third",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTA",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [COUNTIFS =1] =COUNTIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [COUNTIFS >2] =COUNTIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, >2) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "2",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [MAX] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.MAX() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "MAX",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [SUM] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.SUM() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUM",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [SUMIFS >3] =SUMIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUMIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [SUMIFS 4] =SUMIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, 4) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUMIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "4",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [SUMPRODUCT] =SUMPRODUCT($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUMPRODUCT",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [VLOOKUP Column check] =VLOOKUP("", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [VLOOKUP Not found] =VLOOKUP("", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [VLOOKUP ok number] =VLOOKUP(1, $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "1",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [VLOOKUP ok string] =VLOOKUP("1", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"1\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
]
`;

exports[`Database Functions [column] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Database Functions completion 1`] = `
Object {
  "kind": "spreadsheet",
  "name": "MyTable",
  "namespace": "28e28190-63bd-4f70-aeca-26e72574c01a",
  "preview": Object {
    "_data": [Function],
    "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "columnCount": [Function],
    "getColumn": [Function],
    "getRow": [Function],
    "listColumns": [Function],
    "listRows": [Function],
    "name": [Function],
    "rowCount": [Function],
  },
  "replace": "",
  "value": "$28e28190-63bd-4f70-aeca-26e72574c01a",
  "weight": 10,
}
`;

exports[`Database Functions completion 2`] = `
Object {
  "kind": "function",
  "name": "SUM",
  "namespace": "core",
  "preview": Object {
    "args": Array [
      Object {
        "name": "column",
        "type": "Column",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the sum of the column in the database.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "NumberLiteral",
            "errors": Array [],
            "meta": undefined,
            "name": "123",
            "spaceAfter": false,
            "spaceBefore": false,
            "type": "number",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "SUM",
    "name": "SUM",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "replace": "",
  "value": "SUM",
  "weight": 250,
}
`;

exports[`Database Functions completion 3`] = `
Object {
  "kind": "column",
  "name": "first",
  "namespace": "MyTable",
  "preview": Object {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "spreadsheetName": "MyTable",
    "type": "foo",
  },
  "replace": "$28e28190-63bd-4f70-aeca-26e72574c01a.",
  "value": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  "weight": 997,
}
`;

exports[`Database Functions completion 4`] = `
Object {
  "kind": "function",
  "name": "COLUMN_COUNT",
  "namespace": "core",
  "preview": Object {
    "args": Array [
      Object {
        "name": "database",
        "type": "Spreadsheet",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the column size of the database.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "NumberLiteral",
            "errors": Array [],
            "meta": undefined,
            "name": "123",
            "spaceAfter": false,
            "spaceBefore": false,
            "type": "number",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "COLUMN_COUNT",
    "name": "COLUMN_COUNT",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "replace": "",
  "value": "COLUMN_COUNT",
  "weight": 250,
}
`;
